# pessoa

./: .gitignore  LICENSE  README.md
.github/workflows/: cli.yml  lib.yml  main.yml  publish-cli.yml  publish-lib.yml
pessoa/: Cargo.toml  README.md
pessoa-cli/: Cargo.toml  README.md
pessoa-cli/src/: main.rs
pessoa/src/: fake.rs  faking.rs  identity.rs  lib.rs  main.rs
pessoa/tests/: mod.rs
