[package]
name = "pessoa-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pessoa"
path = "src/main.rs"

[dependencies]
pessoa = { path = "../pessoa" }

clap = { version = "4.4", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
