[package]
name = "pessoa-cli"
version = "0.1.0"
edition = "2024"
authors = ["João Conde <joaodiasconde@gmail.com>"]
description = "CLI for generating fake identities/user data in different languages. The crate is named after the Portuguese word for 'person'."
repository = "https://github.com/joao-conde/pessoa"
license = "MIT"
keywords = ["testing", "fake", "identity", "user"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "pessoa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
] }
pessoa = { path = "../pessoa" }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
