[package]
name = "pessoa"
version = "0.1.0"
edition = "2024"

[dependencies]
fake_rs = { package = "fake", version = "4.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "std",
    "derive",
] }
strum = { version = "0.27.1", default-features = false, features = [
    "derive",
    "std",
    "strum_macros",
] }
