[package]
name = "pessoa"
version = "0.1.3"
edition = "2024"
authors = ["João Conde <joaodiasconde@gmail.com>"]
description = "Library for generating fake identities/user data in different languages. The crate is named after the Portuguese word for 'person'."
repository = "https://github.com/joao-conde/pessoa"
license = "MIT"
keywords = ["testing", "fake", "identity", "user"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
fake_rs = { package = "fake", version = "4.3", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "std",
    "derive",
] }
strum = { version = "0.27", default-features = false, features = [
    "derive",
    "std",
    "strum_macros",
] }
